k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-server
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: portfolio-server
